fixed footer hover and final spacing fixes. welcome/login page should be finished

--- a/simon-html-files/styles.css
+++ b/simon-html-files/styles.css
@@ -32,19 +32,30 @@ color: white;
     padding: 10px 20px
 }
 .footer-link {
-    text-decoration:none;
+    text-decoration:underline;
     color: #a0c4ff;
     font-size: 16px;
     padding: 0 100px;
     
 
 }
-.footer-link a:hover {color: aqua;}
+.footer-link:hover {color: aqua; text-decoration: underline;}
 
 body {
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
+    height:100%
 }
 
-m
+.topmargins{margin-top: 20px;}
+.bottommargins{margin-bottom:20px;}
+.extrabottommargins{margin-bottom:40px}
+.extratopmargins{margin-top:40px}
+
+
+
+.size-increase{font-size: 16; padding: 12px 20px;}
+
+
+main{min-height: 88vh;}
